T-7387 theme/totara: Fixed a bug with the tabs overlapping

--- a/theme/totara/styles_totara.css
+++ b/theme/totara/styles_totara.css
@@ -797,6 +797,7 @@ ul.tabrow1 li a:visited {
 .tabrow0 .empty {
     border-bottom:0 none;
     border-top:1px solid #AAAAAA;
+    height:3px;
 }
 .tabtree a,
 .tabtree a:link,
